# AZMusic

./: .editorconfig  .gitignore  CRUSH.md  Makefile  README.md  SANDBOX_VERIFICATION_SUMMARY.md  prompt.md  pyproject.toml  requirements.md
client/: README.md  analysis_options.yaml  pubspec.yaml
client/lib/: bootstrap.dart  main.dart  main_sandbox.dart
client/test/: db_test.dart  widget_test.dart
client/tool/: local_library_smoke.dart
client/windows/: CMakeLists.txt
docs/: ARCHITECTURE.md  CURRENT_MILESTONE.md  FUTURE_UX_ARCHITECTURE.md  REPO_FOUNDATIONS.md  SANDBOX_TEST_PLAN.md  SETUP_GUIDE.md  V1_DELTA_IMPLEMENTATION_CHECKLIST.md  V1_DELTA_SCOPE.md  V1_PRODUCTION_READINESS.md  azmusic_direction_a.html  azmusic_direction_b.html  azmusic_direction_c.html
experiments/: __init__.py
experiments/musescore_mcp_vision/: README.md  __init__.py  config.example.json  config.py  mcp_stdio.py  measure_schema.py  pdf_crop.py  sequence.py  vision.py
scripts/: build-release.ps1  check_qr_urls.py  create-test-fixture.ps1  dev.ps1  hot_reload.ps1  kill-server.ps1  launch-sandbox.ps1  reset-db.ps1  run-release-smoke.ps1  run-server-e2e.ps1  run_score_quality_iteration.py  sandbox.ps1  stop-server.ps1  watch-processing.ps1
scripts/client-installer/: azmusic_client_installer.py
scripts/server-installer/: azmusic_server_installer.py
scripts/server-package/: README.md  (+12 more)
server/: .env.example  .env.production  __init__.py  azmusic_server_entry.py  check_pieces.py  config.py  database.py  main.py  migrate_media_assets.py  requirements-dev.txt  requirements.txt
(+311 files in other folders)
