[project]
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["server/tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["server"]
extend-exclude = ["server/server/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP042", "UP045"]
